--- a/README.org
+++ b/README.org
@@ -52,3 +52,45 @@ cons:
   color.
 
   [[./images/describe-variable.png]]
+* Defining you own single column commands
+
+If you don't want to use =live-completions-mode= all the time, or you
+use it in multiple column mode, but you want to define a few commands
+that provide single-column live completion, use the
+=live-completions-single-column-do= macro.  Use this for lists with
+naturally long candidates, such as filesystem paths or kill-ring
+entries.
+
+For example, let's implement a command to yank from the kill-ring
+using completion. Often the kills are multiline, so for improved
+usability we'll need (1) the completion to start in single column
+mode, (2) the number of lines used to display entries to be relatively
+large, and (3) the separator to be, say, a red dotted line:
+
+#+begin_src emacs-lisp
+  (defun insert-kill-ring-item ()
+    "Insert item from kill-ring, selected with completion."
+    (interactive)
+    (live-completions-single-column-do
+        (:separator (propertize "\n··········\n" 'face '(:foreground "red"))
+         :height 30)
+      (insert (completing-read "Yank: " kill-ring nil t))))
+#+end_src
+
+Note that the completion merely /starts out/ in single column mode:
+nothing keeps you from toggling between single and multiple columns
+while =insert-kill-ring-item= is active. Once the command finishes
+running, your previous column completion configuration will be
+restored.
+
+Both the =:separator= and =:height= are optional. The =:separator= defaults
+to =live-completions-horizontal-separator=. If you don't include a
+=:height= the default is to follow =temp-buffer-resize-mode= if you have
+it active and to use =fit-window-to-buffer=, otherwise (this lets the
+completions buffer take up most of the frame). If you omit both parts
+you still need to include the empty parenthesis:
+=(live-completions-single-column-do () ...)=!.
+
+This package contains the =live-completions-single-column-do= macro for
+you to implement your own commands. It does not define any commands
+that use the macro.
