--- a/README.org
+++ b/README.org
@@ -59,14 +59,13 @@ cons:
 
   (Did you spot the misalignment? :P)
 
-* Defining your own single column commands
+* Defining your own commands with live completion
 
-If you don't want to use =live-completions-mode= all the time, or you
-use it in multiple column mode, but you want to define a few commands
-that provide single-column live completion, use the
-=live-completions-single-column-do= macro.  Use this for lists with
-naturally long candidates, such as filesystem paths or kill-ring
-entries.
+If you don't want to use =live-completions-mode= all the time but you
+want to define a few commands that provide live completion, use the
+=live-completions-do= macro.  You can ask it to start in signle-column
+mode, which is useful for lists with naturally long candidates, such
+as filesystem paths or kill-ring entries.
 
 For example, let's implement a command to yank from the kill-ring
 using completion. Often the kills are multiline, so for improved
@@ -78,8 +77,9 @@ large, and (3) the separator to be, say, a red dotted line:
   (defun insert-kill-ring-item ()
     "Insert item from kill-ring, selected with completion."
     (interactive)
-    (live-completions-single-column-do
-        (:separator (propertize "\n··········\n" 'face '(:foreground "red"))
+    (live-completions-do
+        (:columns 'single
+         :separator (propertize "\n··········\n" 'face '(:foreground "red"))
          :height 30)
       (insert (completing-read "Yank: " kill-ring nil t))))
 #+end_src
@@ -90,14 +90,15 @@ while =insert-kill-ring-item= is active. Once the command finishes
 running, your previous column completion configuration will be
 restored.
 
-Both the =:separator= and =:height= are optional. The =:separator= defaults
-to =live-completions-horizontal-separator=. If you don't include a
-=:height= the default is to follow =temp-buffer-resize-mode= if you have
-it active and to use =fit-window-to-buffer=, otherwise (this lets the
-completions buffer take up most of the frame). If you omit both parts
-you still need to include the empty parenthesis:
-=(live-completions-single-column-do () ...)=!.
+All of the options, =:columns=, =:separator= and =:height=, are
+optional. The =:separator= is only used in single-column mode and
+defaults to =live-completions-horizontal-separator=. If you don't
+include a =:height= the default is to follow =temp-buffer-resize-mode= if
+you have it active and to use =fit-window-to-buffer= otherwise (this
+lets the completions buffer take up most of the frame). If you omit
+all three parts you still need to include the empty parenthesis:
+=(live-completions-do () ...)=!.
 
-This package contains the =live-completions-single-column-do= macro for
-you to implement your own commands. It does not define any commands
-that use the macro.
+This package contains the =live-completions-do= macro for you to
+implement your own commands. It does not define any commands that use
+the macro.
